# regulated-ai-governance-cockpit

./: .gitattributes  .gitignore  CINECA_IT4LIA_REVIEWER_ROUTE.md  EVIDENCE_MAP.md  Makefile  PROJECT_POSITIONING.md  README.md  README_DEPLOYMENT.md  UNDP_REVIEWER_ROUTE.md  app.js  data.js  ducati-overrides.js  index.html  package.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  styles.css
ai-data-agentic-readiness-lab/: EVIDENCE_MAP.md  README.md
ai-factory-workload-pack/: README.md  apptainer.def  benchmark_plan.md  benchmark_report.md  data_management_plan.md  fair_metadata_example.json  workload_manifest.yaml
business-data-quality-lab/: README.md  anomaly_report.md  correction_workflow.md  duplicate_detection.py  duplicate_detection_summary.json  registry_like_sample.csv  validate_registry_like_records.py  validation_summary.json
consulting-delivery-pack/: dashboard_kpi_catalog.md  data_governance_checklist.md  executive_summary_1_page.md  implementation_roadmap.md  ml_model_card.md  risks_and_controls.md  technical_solution_design.md
credit-risk-model-risk-lab/: README.md  README_RECRUITER.md  requirements.txt
cv-industrial-defect-lab/: .gitignore  README.md  requirements.txt
dashboard-workbook/: customer_experience_dashboard.xlsx
evidence/: deployment_evidence.md
evidence-lock/: README.md  commands.sh  environment.yml  reproducibility_manifest.json
governance/: README.md  eu_ai_act_gap_analysis.md  iso42001_public_gap_analysis.md  model_change_log.md  nist_ai_rmf_mapping.csv  validation_checklist.md
hpc-ai-rag-lab/: README.md
(+258 files in other folders)
