[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "regulated-ai-governance-cockpit"
version = "1.0.0"
description = "Executable AI governance and ML evidence portfolio package."
requires-python = ">=3.11"
dependencies = [
  "scikit-learn==1.5.2",
  "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
